syntax = "proto3";

package users;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "boilerplate/pkg/pb/users;users";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title  : "Users API";
    version: "1.0.0";
  };
  base_path           : "/api";
  consumes            : "application/json";
  produces            : "application/json";
  security_definitions: {
    security: {
      key  : "x-auth";
      value: {
        type: TYPE_API_KEY;
        in  : IN_HEADER;
        name: "authorization";
      }
    }
  }
  security: {
    security_requirement: {
      key: "x-auth";
    }
  }
};

// UsersAPI
service UsersAPI {
  // Create
  rpc Create (UserCreateRequest) returns (UserCreateResponse) {
    option (google.api.http) = {
      post: "/users"
      body: "*"
    };
  }

  // Get
  rpc Get (UserGetRequest) returns (UserGetResponse) {
    option (google.api.http) = {
      get: "/users/{user_id}"
    };
  }

  // Update
  rpc Update (UserUpdateRequest) returns (UserUpdateResponse) {
    option (google.api.http) = {
      patch: "/users/{user_id}"
      body : "*"
    };
  }

  // Delete
  rpc Delete (UserDeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/users/{user_id}"
    };
  }
}

// User
message User {
  int64                              id         = 1 [json_name = "id"];
  string                             name       = 2 [json_name = "name"];
  string                             email      = 3 [json_name = "email"];
  string                             role       = 4 [json_name = "role"];
  bool                               is_admin   = 5 [json_name = "is_admin"];
  bool                               deleted    = 6 [json_name = "deleted"];
  google.protobuf.Timestamp          created_at = 7 [json_name = "created_at"];
  google.protobuf.Timestamp          updated_at = 8 [json_name = "updated_at"];
  optional google.protobuf.Timestamp deleted_at = 9 [json_name = "deleted_at"];
}

// UserCreateRequest
message UserCreateRequest {
  string email    = 1 [json_name = "email"];
  string name     = 2 [json_name = "name"];
  string password = 3 [json_name = "password"];
}

// UserCreateResponse
message UserCreateResponse {
  User user = 1 [json_name = "user"];
}

// UserGetRequest
message UserGetRequest {
  int64 user_id = 1 [json_name = "user_id"];
}

// UserGetResponse
message UserGetResponse {
  User user = 1 [json_name = "user"];
}

// UserUpdateRequest
message UserUpdateRequest {
  int64           user_id  = 1 [json_name = "user_id"];
  optional string name     = 2 [json_name = "name"];
  optional string password = 3 [json_name = "password"];
}

// UserUpdateResponse
message UserUpdateResponse {
  User user = 1 [json_name = "user"];
}

// UserDeleteRequest
message UserDeleteRequest {
  int64 user_id = 1 [json_name = "user_id"];
}